# fastapi_auth0_code_flow

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  Dockerfile.nginx
app/app/: main.py
app/app/core/: config.py
fastapi_auth0_code_flow/: config.py  dependencies.py  logger.py  oauth2.py
fastapi_auth0_code_flow/api/: router.py
fastapi_auth0_code_flow/api/endpoints/: auth0.py  user.py
fastapi_auth0_code_flow/schemas/: __init__.py  auth0_token.py  base.py  cookies.py  json_web_token.py  user.py
scripts/: build.sh
